src/test/ui/rfc-1445-restrict-constants-in-patterns/match-forbidden-without-eq.stderr
error: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match-forbidden-without-eq.rs:11:9
   |
LL |         FOO => { }
   |         ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/match-forbidden-without-eq.rs:18:9
   |
LL |         f32::INFINITY => { }
   |         ^^^^^^^^^^^^^
   |
   = note: `#[deny(illegal_floating_point_literal_pattern)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/match-forbidden-without-eq.rs:18:9
   |
LL |         f32::INFINITY => { }
   |         ^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: aborting due to 3 previous errors

